Finition du projet sans firebase

--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.less"
             ],
             "scripts": []
@@ -96,6 +97,16 @@
               "src/styles.less"
             ],
             "scripts": []
+          }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "angular-projet-nutrition:build:production",
+            "firebaseProject": "nutriplus-535c4",
+            "firebaseHostingSite": "nutriplus-535c4"
           }
         }
       }
